trino/resources/nginx/base/trino-ingress.yaml
# Ingress yaml for nginx
# Ensure to first create the TLS secret as follows:
# kubectl create secret tls trino-tls --cert=tls.crt --key=tls.key --namespace=trino
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: trino
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - $(TRINO_DOMAINNAME)
    secretName: trino-tls
  rules:
  - host: $(TRINO_DOMAINNAME)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trino-coordinator-service
            port:
              number: 8080
